[package]
name = "android-auto"
description = "A crate for implementing the android auto protocol."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/uglyoldbob/android-auto.git"
publish = ["crates-io"]
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1.88"
bitfield = "0.19.0"
bluetooth-rust = { version = "0.1.0", optional = true }
enum_dispatch = "0.3.13"
futures = "0.3.30"
log = "0.4.27"
protobuf = "3.7.2"
rustls = { git = "https://github.com/uglyoldbob/rustls.git", version = "0.23.26", features = ["ring"] }
serde = {version = "1.0.219", features = ["derive"]}
tokio = { version = "1.40.0", features = ["full"], optional = true }
webpki-roots = "0.26.9"

[build-dependencies]
protobuf-codegen = "3.7.2"

[features]
default = ["wireless"]
wireless = ["dep:bluetooth-rust", "dep:tokio"]
